[package]
name = "timefyi"
version = "0.1.1"
edition = "2021"
authors = ["FYIPedia"]
description = "Timezone operations, business hours, and sunrise/sunset — async API client for timefyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/timefyi-rs"
homepage = "https://timefyi.com"
documentation = "https://docs.rs/timefyi"
readme = "README.md"
keywords = ["timezone", "time", "sunrise", "sunset", "worldclock"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
